# namazu

./: AUTHORS  BUILD-ja.txt  CREDITS  ChangeLog  ChangeLog.1  CustomizeLog  HACKING  HACKING-ja  HACKING.win32  HACKING.win64  HACKKIT.tgz  Makefile.am  NEWS  README  README-es  README-ja  THANKS  TODO  acinclude.m4  autogen.sh  configure.in  maintMakefile  make_sjis_po  namazu.spec.in  nmz-config.in
Admin/: CHANGES-2.0-ja.txt  PATCHES.AM  PATCHES.GT  PATCHES.LT  TODO-namazu-2.0  TODO-satoru  design.c  regex-ruby-alloca.patch
File-MMagic/: MMagic.pm  Makefile.PL
conf/: Makefile.am  namazurc-sample  namazurc-sample.win32
contrib/: ChangeLog  Makefile.am  README  namazu_utf8  nmzchkw.pl  spreadexcel.pl  xps.pl
doc/: Makefile.am  maintMakefile  namazu.css  update-doc.pl
doc/en/: Makefile.am  manual.html  nmz.html  tips.html  tutorial.html
doc/ja/: Makefile.am  manual.html  nmz.html  tips.html  tutorial.html
etc/: Makefile.am
filter/: Makefile.am  apachecache.pl  bzip2.pl  compress.pl  deb.pl  dvi.pl  epub.pl  excel.pl  gnumeric.pl  gzip.pl  hdml.pl  hnf.pl  html.pl  koffice.pl  macbinary.pl  mailnews.pl  man.pl  mhonarc.pl  mp3.pl  msofficexml.pl  msword.pl  oasys.pl  ooo.pl  pdf.pl  pipermail.pl  postscript.pl  powerpoint.pl  rfc.pl  rpm.pl  rtf.pl  taro.pl  taro56.pl  taro7_10.pl  tex.pl  visio.pl  wordpro.pl  zip.pl
filter/win32/: Makefile.am  ichitaro456.pl  oleexcel.pl  olemsword.pl  olepowerpoint.pl  olertf.pl  oletaro.pl  olevisio.pl  xdoc2txt.pl
gettext-0.13.1/: Makefile  config.status
lib/: Makefile.am  getopt.c  getopt.h  getopt1.c
libiconv-1.12/: Makefile  NEWS  README  README-ja.txt  config.h.msvc  config.status  libtool
lisp/: ChangeLog  ChangeLog.gnus-nmz-1  Makefile.am  gnus-nmz-1.el  namazu.el
m4/: ChangeLog
man/: Makefile.am  adnmz.1  bnamazu.1  gcnmz.1  help2man  kwnmz.1  lnnmz.1  mailutime.1  mknmz.1  mknmz.x  namazu.1  namazu.x  nmz-config.1  nmzcat.1  nmzgrep.1  nmzmerge.1  rfnmz.1  tknamazu.1  vfnmz.1
msvc/: cgi.aps  cgi.dep  cgi.rc  cgi.vcproj  cgi.vcxproj  cgi.vcxproj.filters  core.dep  core.vcproj  core.vcxproj  core.vcxproj.filters  libnmz.dep  libnmz.vcproj  libnmz.vcxproj  libnmz.vcxproj.filters  nmz.rc  (+15 more)
nmz/: Makefile.am  add-prefix.pl  alias.c  alias.h  alloca.c  codeconv.c  codeconv.h  field.c  field.h  get-extern-funcs.pl  hlist.c  hlist.h  i18n.c  i18n.h  idxname.c  idxname.h  l10n-ja.c  l10n-ja.h  libnamazu.c  libnamazu.h  list.c  list.h  maintMakefile  memcmp.c  memmove.c  memset.c  nmzversion.c.in  parser.c  parser.h  query.c  query.h  re.c  re.h  regex-ruby.c  regex.c  regex.h  reminder.c  replace.c  replace.h  score.c  (+18 more)
pl/: Makefile.am  codeconv.pl  conf.pl.in  document.pl  ext.pl  extutf8.pl  extzip.pl  filter.pl.in  gettext.pl.in  gfilter.pl  htmlsplit.pl  nmzidx.pl  seed.pl  time.pl  usage.pl  util.pl  var.pl.in  wakati.pl
pltests/: Makefile.am  README-ja.txt  alltests.pl.in  chasen-1.pl.in  chasen-2.pl.in  chasen-3.pl.in  env.pl.in  gcnmz-1.pl.in  idxdiff-1.pl.in  idxdiff-2.pl.in  idxdiff-3.pl.in  ja-namazu-cgi-3.pl.in  kakasi-1.pl.in  kakasi-2.pl.in  kakasi-3.pl.in  mecab-1.pl.in  mecab-2.pl.in  mecab-3.pl.in  mknmz-1.pl.in  mknmz-10.pl.in  mknmz-12.pl.in  mknmz-14.pl.in  mknmz-15.pl.in  mknmz-16.pl.in  mknmz-17.pl.in  mknmz-18.pl.in  mknmz-2.pl.in  mknmz-3.pl.in  mknmz-4.pl.in  mknmz-5.pl.in  mknmz-6.pl.in  mknmz-7.pl.in  mknmz-8.pl.in  namazu-1.pl.in  namazu-10.pl.in  namazu-11.pl.in  namazu-12.pl.in  namazu-2.pl.in  namazu-3.pl.in  namazu-4.pl.in  (+17 more)
scripts/: Makefile.am  adnmz.in  bnamazu.in  gcnmz.in  gtnmz.in  kwnmz.in  lnnmz.in  mailutime.in  mknmz.in  nmzcat.in  nmzegrep.in  nmzgrep.in  nmzmerge.in  rfnmz.in  vfnmz.in
src/: Makefile.am  cgi.c  cgi.h  charset.c  charset.h  form.c  form.h  message.h  namazu-cgi.c  namazu-cmd.c  namazu.c  namazu.h  output.c  output.h  rcfile.c  rcfile.h  result.c  result.h  usage.c  usage.h
template/: Makefile.am  NMZ.foot.de  NMZ.foot.es  NMZ.foot.fr  NMZ.foot.ja  NMZ.foot.pl  NMZ.head  NMZ.head.de  NMZ.head.es  NMZ.head.fr  NMZ.head.ja  NMZ.head.pl
tests/: Makefile.am  commonfuncs  gcnmz-1  idxdiff-1  idxdiff-2  idxdiff-3  ja-mknmz-1  ja-namazu-1  ja-namazu-cgi-1  ja-namazu-cgi-3  mknmz-1  mknmz-10  mknmz-11  mknmz-12  mknmz-13  mknmz-14  mknmz-15  mknmz-16  mknmz-17  mknmz-18  mknmz-19  mknmz-2  mknmz-3  mknmz-4  mknmz-5  mknmz-6  mknmz-7  mknmz-8  mknmz-9  namazu-1  namazu-10  namazu-11  namazu-12  namazu-13  namazu-2  namazu-3  namazu-4  namazu-5  namazu-6  namazu-7  (+14 more)
tests/data/: Makefile.am
tests/data/decodebase64/: Makefile.am  multi-part-mail.txt
tests/data/dup-field/: Makefile.am  dup-field.txt
tests/data/emphasize/: Makefile.am  emphasize.txt
tests/data/en/: Makefile.am  apachecache.txt  dvi.dvi  excel97.xls  gnumeric.gnumeric  hdml.hdml  kivio.flw  kpresenter.kpr  kspread.ksp  kword.kwd  mail-multipart.txt  mail.eml  man.1  msg00000.html  namazu-dummy_1.0-1_i386.deb  oowriter.sxw  plain.txt.Z  plain.txt.bz2  postscript.ps  powerpoint97.ppt  rfc0000.txt  rpm.rpm  tex.tex  word97.doc
tests/data/filter/: Makefile.am  filter-test.txt  testfilter.pl
tests/data/html-split/: 1.html  2.html  Makefile.am
tests/data/ja/: Makefile.am  apachecache.txt  d20000220.hnf  dvi.dvi  epub2.epub  excel2007.xlsx  excel2010.xlsx  excel5.xls  excel95.xls  excel97.xls  excel98.xls  gnumeric.gnumeric  hdml.hdml  kivio.flw  kpresenter.kpr  kspread.ksp  kword.kwd  mail-multipart.txt  mail.txt  man.1  msg00000.html  oocalc.ods  oocalc.sxc  oodraw.odg  oodraw.sxd  ooimpress.odp  ooimpress.sxi  oowriter.odt  oowriter.sxw  plain.txt.Z  plain.txt.bz2  postscript.ps  powerpoint2002.pps  powerpoint2002.ppt  powerpoint2002.rtf  powerpoint2007.ppsx  powerpoint2007.pptx  powerpoint2010.ppsx  powerpoint2010.pptx  powerpoint97.ppt  (+24 more)
tests/data/ja-spec/: Makefile.am  bad-phrase.txt  yama-umi.txt
tests/data/query/: 1  2  3  Makefile.am
tknamazu/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in  mini-tknamazu.xpm  tknamazu.hlp.en  tknamazu.hlp.ja  tknamazu.hlp.ja_JP.SJIS  tknamazu.spec.in  tknamazu.tcl.in  tknamazu_icon.ppm  tknamazu_logo.ppm  tknamazurc.in
(+238 files in other folders)
