## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 no-dependencies

templatedir = $(pkgdatadir)/template

template_DATA = \
	NMZ.body \
	NMZ.body.ja \
	NMZ.foot \
	NMZ.foot.ja \
	NMZ.head \
	NMZ.head.ja \
	NMZ.result.normal \
	NMZ.result.short \
	NMZ.result.normal.ja \
	NMZ.result.short.ja \
	NMZ.tips \
	NMZ.tips.ja \
	NMZ.body.es \
	NMZ.head.es \
	NMZ.result.short.es \
	NMZ.foot.es \
	NMZ.result.normal.es \
	NMZ.tips.es \
	NMZ.body.fr \
	NMZ.foot.fr \
	NMZ.head.fr \
	NMZ.result.normal.fr \
	NMZ.result.short.fr \
	NMZ.tips.fr \
	NMZ.foot.de \
	NMZ.head.de \
	NMZ.result.normal.de \
	NMZ.result.short.de \
	NMZ.body.pl \
	NMZ.foot.pl \
	NMZ.head.pl \
	NMZ.result.normal.pl \
	NMZ.result.short.pl \
	NMZ.tips.pl

EXTRA_DIST = $(template_DATA)
