## Process this file with automake to produce Makefile.in
EXTRA_DIST  = acrobat5.pdf \
	      excel97.xls \
	      html.html \
	      mail-multipart.txt \
	      mail.txt \
	      man.1 \
	      msg00000.html \
	      plain.txt \
	      plain.txt.Z \
	      plain.txt.bz2 \
	      plain.txt.gz \
	      rfc0000.txt \
	      tex.tex \
	      word97.doc \
	      powerpoint97.ppt \
	      postscript.ps \
	      dvi.dvi \
              namazu-dummy_1.0-1_i386.deb \
              rpm.rpm \
              oowriter.sxw \
	      apachecache.txt \
	      hdml.hdml \
	      ID3v1.mp3 \
	      ID3v2.mp3 \
	      kivio.flw \
	      kpresenter.kpr \
	      kspread.ksp \
	      kword.kwd \
	      gnumeric.gnumeric

